welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:43: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^ZigZag:46: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^ZigZag:49: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^ZigZag:52: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^ZigZag:55: error: Missing closing brace `}' assumed here
}
^